# succint-zk-residency

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  go.mod  go.sum
agglayer-proof/agglayer_proofs/: aggregation_for_1_2_3.json  aggregation_for_1_70.json  aggregation_for_2_3.json  aggregation_for_3.json  aggregation_from_1_to_1_proof.json
agglayer-proof/client/: Cargo.toml
agglayer-proof/client/src/: main.rs
agglayer-proof/host/: Cargo.toml  build.rs
agglayer-proof/host/src/: main.rs
bridge/: genproof.go
bridge/client/: Cargo.toml
bridge/client/src/: main.rs
bridge/host/: Cargo.toml  build.rs
bridge/host/src/: cli.rs  main.rs
demo/: docker-compose.yml  main.go
demo/config/: cdk-template.toml
elf/: agglayer-proof  aggregation-fep-solidity  aggregation-final  block-aggregation  bridge  chain-proof  chain-proof-fep  chain-proof-op  chain-proof-pos  op-chain  op-consensus  pos-chain  riscv32im-succinct-zkvm-elf
fep-type-1/: README.md
fep-type-1/aggregation-final/client/: Cargo.toml
fep-type-1/aggregation-final/client/src/: main.rs
fep-type-1/aggregation-final/contracts/src/fixtures/: "proof_final_aggregation"-fixture.json
fep-type-1/aggregation-final/host/: Cargo.toml  build.rs
fep-type-1/aggregation-final/host/src/: main.rs
fep-type-1/block/: Cargo.toml
fep-type-1/block-aggregation/: Cargo.toml
fep-type-1/block-aggregation/client/: Cargo.toml
fep-type-1/block-aggregation/client/src/: main.rs
fep-type-1/block-aggregation/host/: Cargo.toml  build.rs
fep-type-1/block-aggregation/host/src/: main.rs
fep-type-1/block-aggregation/src/: main.rs
fep-type-1/block/client/: Cargo.toml
fep-type-1/block/client/src/: main.rs
fep-type-1/block/host/: Cargo.toml  build.rs
fep-type-1/block/host/src/: main.rs  paralel.sh
fep-type-1/bridge/client/: Cargo.toml
fep-type-1/bridge/client/src/: main.rs
fep-type-1/bridge/host/: Cargo.toml  build.rs
fep-type-1/bridge/host/src/: main.rs
fep-type-1/chain-proof/client/: Cargo.toml
fep-type-1/chain-proof/client/src/: main.rs
fep-type-1/chain-proof/host/: Cargo.toml  build.rs
fep-type-1/chain-proof/host/src/: main.rs
fep-type-1/contracts/: multi-ger-getter.sol
fep-type-1/e2etest/: README.md  compile-contracts.sh  docker-compose.yml  go.mod  go.sum  main_test.go
fep-type-1/e2etest/abi/: gerl2.abi  multigerassertor.abi
fep-type-1/e2etest/bridgel2/: bridgel2.go
fep-type-1/e2etest/config/: cdk-local.toml  cdk.toml  l2genesis.json  password  template_cdk.toml
fep-type-1/e2etest/gerl2/: gerl2.go
fep-type-1/e2etest/multigerassertor/: multigerassertor.go
fep-type-1/simpleBlock/client/: Cargo.toml
fep-type-1/simpleBlock/host/src/: main.rs
fep-type-1/uniswap/client/: Cargo.toml
fep-type-1/uniswap/client/elf/: riscv32im-succinct-zkvm-elf
fep-type-1/uniswap/client/src/: main.rs
fep-type-1/uniswap/contracts/src/fixtures/: plonk-fixture.json
fep-type-1/uniswap/host/: Cargo.toml
fep-type-1/uniswap/host/src/: main.rs
goutils/: envloader.go
goutils/contracts/abi/: bridgel2.abi  gerl2.abi  multigerassertor.abi
goutils/contracts/opfaultdisputegame/: opfaultdisputegame.go
lib/: Cargo.toml
lib/src/: bridge.rs  constants.rs  fep_type_1.rs  lib.rs  op.rs  pos.rs  pos_consensus.rs
op/: README.md  main.go
op/aggregation/client/src/: main.rs
op/chain-proof/client/: Cargo.toml
op/chain-proof/client/src/: main.rs
op/chain-proof/host/: Cargo.toml  build.rs
op/chain-proof/host/src/: cli.rs  main.rs
op/consensus/client/: Cargo.toml
op/consensus/client/src/: main.rs
op/consensus/host/: Cargo.toml  build.rs
op/consensus/host/src/: main.rs
op/e2etest/: README.md  docker-compose.yml  go.mod  go.sum  main.go  main_test.go
op/e2etest/config/: cdk.toml  claimsponsor.keystore  template_cdk.toml
pos/: README.md  main.go
pos-consensus-proof/client/src/: main.rs  milestone.rs
pos-consensus-proof/contracts/src/: ConsensusProofVerifier.sol
pos-consensus-proof/host/: Cargo.toml  build.rs
pos-consensus-proof/host/src/: contract.rs  types.rs  utils.rs
pos/chain-proof/client/: Cargo.toml
pos/chain-proof/client/src/: main.rs
pos/chain-proof/host/: Cargo.toml  build.rs
pos/consensus/client/: Cargo.toml  build.rs
pos/consensus/client/src/: helper.rs  lib.rs  main.rs  milestone.rs  types.proto  types.rs
pos/consensus/contracts/: .gitignore
pos/consensus/contracts/src/: ConsensusProofVerifier.sol
pos/consensus/host/: Cargo.toml  build.rs
pos/consensus/host/src/: contract.rs  lib.rs  utils.rs
program/: Cargo.toml
script/: Cargo.toml  build.rs
script/src/: main.rs
