[workspace]
members = [
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false, features = ["derive"] }
url = "2.3"
clap = { version = "4.5.7", features = ["derive", "env"] }
dotenv = "0.15.0"
bincode = "1.3.3"
eyre = "0.6"
tokio = { version = "1.21", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }


# rsp
rsp-rpc-db = { git = "https://github.com/xJonathanLEI/rsp" , branch = "fix/revm_semver"}
rsp-witness-db = { git = "https://github.com/xJonathanLEI/rsp" , branch = "fix/revm_semver"}
rsp-primitives = { git = "https://github.com/xJonathanLEI/rsp" , branch = "fix/revm_semver"}
rsp-client-executor = { git = "https://github.com/xJonathanLEI/rsp" , branch = "fix/revm_semver"}
rsp-mpt = { git = "https://github.com/xJonathanLEI/rsp" , branch = "fix/revm_semver"}

rsp-host-executor = { git = "https://github.com/xJonathanLEI/rsp", branch = "fix/revm_semver" }

# sp1
sp1-sdk = "2.0.0"


# alloy
alloy-provider = { version = "0.3", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-sol-types = { version = "0.8" }

# revm
revm = { version = "=14.0.1", features = [
    "optimism",
    "std",
    "serde",
    "kzg-rs",
], default-features = false }

# reth
reth-primitives = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false, features = [
    "alloy-compat",
    "optimism",
    "std",
] }