[workspace]
members = [
    "lib",
    "fep-type-1/block/client",
    "fep-type-1/block/host",
    "fep-type-1/block-aggregation/client",
    "fep-type-1/block-aggregation/host",
    "fep-type-1/aggregation-final/client",
    "fep-type-1/aggregation-final/host",
    "fep-type-1/bridge/client",
    "fep-type-1/bridge/host",
    # "script",
]
resolver = "2"


[workspace.dependencies]
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false, features = ["derive"] }
url = "2.3"
clap = { version = "4.5.7", features = ["derive", "env"] }
dotenv = "0.15.0"
bincode = "1.3.3"
eyre = "0.6"
tokio = { version = "1.21", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }
hex = "0.4.3"


# rsp
rsp-rpc-db = { git = "https://github.com/xJonathanLEI/rsp" , branch = "fix/revm_semver"}
rsp-witness-db = { git = "https://github.com/xJonathanLEI/rsp" , branch = "fix/revm_semver"}
rsp-primitives = { git = "https://github.com/xJonathanLEI/rsp" , branch = "fix/revm_semver"}
rsp-client-executor = { git = "https://github.com/xJonathanLEI/rsp" , branch = "fix/revm_semver"}
rsp-mpt = { git = "https://github.com/xJonathanLEI/rsp" , branch = "fix/revm_semver"}

rsp-host-executor = { git = "https://github.com/xJonathanLEI/rsp", branch = "fix/revm_semver" }

# sp1
sp1-sdk = "2.0.0"
sp1-zkvm = {version = "2.0.0", features = ["verify"]}


# alloy
alloy-provider = { version = "0.3", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-sol-types = { version = "0.8" }
alloy-primitives = "0.8.0"
alloy-sol-macro = { version = "0.8" }
alloy = { version = "0.3" }
alloy-rpc-types = { version = "0.3", default-features = false, features = [
    "eth",
] }

# revm
revm = { version = "=14.0.1", features = [
    "optimism",
    "std",
    "serde",
    "kzg-rs",
], default-features = false }

# reth
reth-primitives = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false, features = [
    "alloy-compat",
    "optimism",
    "std",
] }

# sp1-cc
sp1-cc-client-executor = { git = "https://github.com/succinctlabs/sp1-contract-call/", branch = "main" }
sp1-cc-host-executor = { git = "https://github.com/succinctlabs/sp1-contract-call/", branch = "main" }


# sha2
sha2 = "0.10.8"

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes.git", package = "sha2", branch = "patch-v0.10.8" }