[workspace]
members = [
    "lib",
    "fep-type-1/block/client",
    "fep-type-1/block/host",
    "fep-type-1/block-aggregation/client",
    "fep-type-1/block-aggregation/host",
    "fep-type-1/aggregation-final/client",
    "fep-type-1/aggregation-final/host",
    "fep-type-1/chain-proof/client",
    "fep-type-1/chain-proof/host",
    "bridge/client",
    "bridge/host",
    "agglayer-proof/host",
    "agglayer-proof/client",
    "pos-consensus-proof/client",
    # "script",
    "op/consensus/client",
    "op/consensus/host",
    "op/chain-proof/client",
    "op/chain-proof/host",
]
resolver = "2"


[workspace.dependencies]
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false, features = ["derive"] }
url = "2.3"
clap = { version = "4.5.7", features = ["derive", "env"] }
dotenv = "0.15.0"
bincode = "1.3.3"
eyre = "0.6"
tokio = { version = "1.21", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }
hex = "0.4.3"
base64 = "0.22.1"
bytes = "1.7.1"
prost = "0.13.1"
prost-types = "0.13.1"

# rsp
rsp-rpc-db = { git = "https://github.com/invocamanman/rsp" , branch = "feature/addDinamycChainIDClique"}
rsp-witness-db = { git = "https://github.com/invocamanman/rsp" , branch = "feature/addDinamycChainIDClique"}
rsp-primitives = { git = "https://github.com/invocamanman/rsp" , branch = "feature/addDinamycChainIDClique"}
rsp-client-executor = { git = "https://github.com/invocamanman/rsp" , branch = "feature/addDinamycChainIDClique"}
rsp-mpt = { git = "https://github.com/invocamanman/rsp" , branch = "feature/addDinamycChainIDClique"}

rsp-host-executor = { git = "https://github.com/invocamanman/rsp", branch = "feature/addDinamycChainIDClique" }

# sp1
sp1-sdk = "2.0.0"
sp1-zkvm = {version = "2.0.0", features = ["verify"]}


# alloy
alloy-provider = { version = "0.3", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-sol-types = { version = "0.8" }
alloy-primitives = "0.8.0"
alloy-sol-macro = { version = "0.8" }
alloy = { version = "0.3" }
alloy-rlp = "0.3.4"
alloy-rpc-types = { version = "0.3", default-features = false, features = [
    "eth",
] }

# revm
revm = { version = "=14.0.1", features = [
    "optimism",
    "std",
    "serde",
    "kzg-rs",
], default-features = false }

# reth
reth-primitives = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false, features = [
    "alloy-compat",
    "optimism",
    "std",
] }

# sp1-cc
sp1-cc-client-executor = { git = "https://github.com/succinctlabs/sp1-contract-call/", branch = "main" }
sp1-cc-host-executor = { git = "https://github.com/succinctlabs/sp1-contract-call/", branch = "main" }


# sha2
sha2 = "0.10.8"

tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }


[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", branch = "patch-sha3-v0.10.8" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", branch = "patch-v0.5.5" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", branch = "patch-ecdsa-v0.16.9" }
substrate-bn = { git = "https://github.com/sp1-patches/bn", branch = "patch-v0.6.0" }
