# RSP uses a different version of rust than the rest of SP1,
# so we need to use a different toolchain, which we achieve by
# declaring an empty workspace.
[package]
version = "0.1.0"
name = "rsp-script"
edition = "2021"

[dependencies]
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = "1.3.3"
clap = { version = "4.5.7", features = ["derive", "env"] }

# rsp
rsp-host-executor = { git = "https://github.com/succinctlabs/rsp/", rev = "792efd0" }
rsp-client-executor = { git = "https://github.com/succinctlabs/rsp/", rev = "792efd0" }

reth-primitives = { git = "https://github.com/paradigmxyz/reth" }

# sp1
sp1-sdk = "2.0.0"

[build-dependencies]
sp1-build = "2.0.0"

[features]
default = []
cuda = ["sp1-sdk/cuda"]
