[package]
name = "bridge-program"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
bincode.workspace = true
sp1-zkvm.workspace = true
polccint-lib = { path = "../../lib" }
sp1-cc-client-executor.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-sol-macro.workspace = true
revm.workspace = true

