[package]
name = "block-aggregation-program"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
bincode = "1.3.3"
hex = "0.4.3"
sha2 = "0.10.8"
sp1-zkvm = {version = "2.0.0", features = ["verify"]}
polccint-lib = { path = "../../lib" }

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes.git", package = "sha2", branch = "patch-v0.10.8" }