[package]
name = "block-aggregation-program"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
bincode.workspace = true
hex.workspace = true
sp1-zkvm.workspace = true
polccint-lib = { path = "../../../lib" }
sp1-cc-client-executor.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-sol-macro.workspace = true

# EVM
revm.workspace = true

sha2.workspace = true

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes.git", package = "sha2", branch = "patch-v0.10.8" }