[package]
name = "block-aggregation-program"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
bincode.workspace = true
sp1-zkvm.workspace = true
polccint-lib = { path = "../../../lib" }
sha2.workspace = true

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes.git", package = "sha2", branch = "patch-v0.10.8" }