[package]
name = "uniswap-client"
description = ""
edition = "2021"

[dependencies]

# workspace
sp1-cc-client-executor.workspace = true


# alloy
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-sol-macro.workspace = true

# EVM
revm.workspace = true

# sp1
sp1-zkvm.workspace = true

# misc
bincode.workspace = true
