[package]
name = "pos-consensus-proof-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
base64.workspace = true
sha2.workspace = true
bytes.workspace = true
prost.workspace = true
prost-types.workspace = true
bincode.workspace = true

sp1-zkvm.workspace = true
sp1-cc-client-executor.workspace = true

reth-primitives.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-sol-types.workspace = true

[build-dependencies]
prost-build = "0.13.1"